--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 											<h3>Embedded linux</h3>
 											<p>High performance ARM based embedded hardware and software design.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="embedded.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -216,7 +216,7 @@
 											<span class="opener">Tech blogs</span>
 											<ul>
 												<li><a href="#">Robotics</a></li>
-												<li><a href="#">Embedded linux</a></li>
+												<li><a href="embedded.html">Embedded linux</a></li>
 												<li><a href="#">STM32 MCU</a></li>
 												<!--<li><a href="#">Feugiat Veroeros</a></li> -->
 											</ul>
