--- a/embedded.html
+++ b/embedded.html
@@ -91,7 +91,10 @@
 							        new Valine({
 							            el: '#vcomments',
 							            appId: 'c0JFUTW7HfoIsEKI0cc0rMU1-gzGzoHsz',
-							            appKey: '2PqF7zsnpVGMb2KbvKrffE6o'
+							            appKey: '2PqF7zsnpVGMb2KbvKrffE6o',
+							            avatar: 'robohash',
+							            lang: 'en',
+							            placeholder: 'Message here.\n \n(Tips: To make a anonymous comment, nickname, website and email are not necessary.\n If you want show your nickname a Verification email will be sent to the email address you enter. )'
 							        })
 							    </script>
 
