change to jekyll

--- a/embedded.html
+++ b/embedded.html
@@ -93,8 +93,11 @@
 							            appId: '9CvJWlMvXQsUUkjcCF0nbtSS-MdYXbMMI',
 							            appKey: 'KQFufTHJeHucASskKMC6xtLG',
 							            avatar: 'robohash',
+							            meta: ['nick', 'mail'],
 							            lang: 'en',
-							            placeholder: 'Message here.\n \n(Tips: To make a anonymous comment, nickname, website and email are not necessary.\n If you want show your nickname a Verification email will be sent to the email address you enter. )'
+							            visitor: true,
+							            enableQQ:true,
+							            placeholder: 'Message here.\n (Tips: To make a anonymous comment, nickname and email are not necessary.\n Please entry nickname and email, if you want to show your nickname and get reply reminder by email. )\n(输入nickname和email，可显示网络名并得到邮件回复提醒。)'
 							        })
 							    </script>
 
