add Ar_tag blog

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 permalink: /404.html
-layout: default
+title: Oooopps
 ---
 
 <style type="text/css" media="screen">
@@ -23,3 +23,5 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
+
+{%include chat_bar.html%}
